2009-10-27  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_songbird.c: All player operation is supported in Songbird
	* src/ol_player_exaile03.c: All player operation but seek is supported in Exaile 0.3
	* src/ol_player_amarok2.c : All player operation is supported in Amarok2
	* src/ol_player_audacious.c : All player operation is supported in Audacious
	* src/tests/ol_player_test.c: New test for player
	* src/ol_player_mpris.c : All player operation is supported in MPRIS

2009-10-25  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_update_lyric_pixmap): Remove the NULL check for pixmaps which is wrong

2009-10-23  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player.h: Adds new interface to control players

2009-10-16  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: Fixed some warning caused by NULL pointer

2009-10-14  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: Multi-thread lyric downloading and lyric choose ui is implemented

	* src/ol_lrc_fetch_module.h: New module implements multithread lyric downloading.

2009-10-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: Download lrc files in seperate child processes

2009-10-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_exaile03.c: Add exaile 0.3 support

2009-09-24  Tiger Soldier  <tigersoldi@gmail.com>

	* Add options for translucent on mouse move

	* src/ol_player_songbird.c: Songbird support with MPRIS plugin

	* src/ol_player_mpris.c (ol_player_mpris_get_music_info): Fixed a crashing bug caused by free extra string of track number

2009-09-22  Tiger Soldier  <tigersoldi@gmail.com>

	* README: Adds acknowledgement for gnome-do and Longyu Li, the icon designer
	* New icon designed by Longyu Li

2009-09-17  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_unmap): Fix issue #16

2009-09-14  Tiger Soldier  <tigersoldi@gmail.com>
	* New icons, we can throw the icon of WMP away now!
